--- a/MesaAppCliente/.classpath
+++ b/MesaAppCliente/.classpath
@@ -2,5 +2,9 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="/Users/robinvasco/eclipse-workspace/lib/mysql-connector-java-5.1.18.jar"/>
+	<classpathentry kind="lib" path="/Users/robinvasco/eclipse-workspace/lib/NefAnimacion_V2.1_jdk18.jar"/>
+	<classpathentry kind="lib" path="/Users/robinvasco/eclipse-workspace/lib/JPlaceHolder.jar"/>
+	<classpathentry kind="lib" path="/Users/robinvasco/eclipse-workspace/lib/AbsoluteLayout.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
