--- a/GestionAppCliente/.classpath
+++ b/GestionAppCliente/.classpath
@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/Users/robinvasco/eclipse-workspace/lib/NefAnimacion_V2.1_jdk18.jar"/>
-	<classpathentry kind="lib" path="/Users/robinvasco/eclipse-workspace/lib/JPlaceHolder.jar"/>
-	<classpathentry kind="lib" path="/Users/robinvasco/eclipse-workspace/lib/AbsoluteLayout.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ASUS/git/ProyectoSistemasDistribuidos/GestionAppCliente/lib/AbsoluteLayout.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ASUS/git/ProyectoSistemasDistribuidos/GestionAppCliente/lib/JPlaceHolder.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ASUS/git/ProyectoSistemasDistribuidos/GestionAppCliente/lib/NefAnimacion_V2.1_jdk18.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
